feat(multitenancy): enforce builtin-plus-user skill visibility